[package]
name = "dsq-shared"
version = "0.1.0"
edition = "2021"
authors = ["Durable Programming LLC"]
description = "Shared types and utilities for DSQ crates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/durableprogramming/dsq"
keywords = ["data", "shared", "utilities"]
categories = ["data-structures"]

[lints]
workspace = true

[dependencies]
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization (minimal for shared types)
serde = { workspace = true }
serde_json = { workspace = true }

# Big integer support
num-bigint = { workspace = true }
num-traits = { workspace = true }

# Date/time (needs both targets for different features)
chrono = { workspace = true }

# Utilities
indexmap = { workspace = true }
base64 = { workspace = true }
polars = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { workspace = true, features = ["serde", "wasmbind"] }



[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
